Implemented Complete Device Module, Device Telemetry, Device Attributes, Device Payload Module